--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,11 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to my research website.My name is Kiseok and here is my tooth data analysis.
+
+* [Teeth growth analysis](teeth.html)
+
+Here is another amazing analysis by Hope Anderson.
+
+* [Teeth growth analysis2](https://hdanderson.github.io/myproject_reproducibility/)
+
